--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-canvas": "^0.9.3",
+		"uuid": "^9.0.0"
+	}
 }
